<resources>
    <string name="app_name">Meme Store</string>
    <string name="tab_text_1">Memes</string>
    <string name="tab_text_2">Quotes</string>
    <string name="tab_text_3">Facts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_image">post image</string>
    <string name="post_author_image">Post author image</string>
    <string name="like_btn">Like</string>
    <string name="comment_btn">Comment</string>
    <string name="send_btn">Send</string>
    <string name="plus_btn">create a post</string>
    <string name="gallery_image">Gallery Image</string>
    <string name="selected_pic">selected pic to upload</string>
    <string name="upload_post_caption_placeholder">Add a caption</string>
    <string name="post_btn_title">Post</string>
    <string name="userImage">User Profile Pic</string>
    <string name="page_title">Meme Store</string>
</resources>