<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_parent_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/card_contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/post_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/post_author_image"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/post_author_image"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/post_author_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Sanchit Khurana" />
            </LinearLayout>

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/post_image"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <LinearLayout
                android:id="@+id/post_review_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:rotationX="8"
                android:weightSum="9">

                <ImageButton
                    android:id="@+id/like_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_background"
                    android:contentDescription="@string/like_btn"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/filled_thumbs_up" />

                <ImageButton
                    android:id="@+id/comment_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_background"
                    android:contentDescription="@string/comment_btn"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/comment" />

                <ImageButton
                    android:id="@+id/send_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/design_default_color_background"
                    android:contentDescription="@string/send_btn"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/send" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>